More assets + added logos to screenshots

--- a/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
@@ -51,6 +51,9 @@
           </div>
           <div class="screenshot">
             {{ high_res_img('thunderbird/appeal/nov24/screen-2004.png', {'alt': ''}, alt_formats=()) }}
+            <div class="screenshot-logo">
+              {{ high_res_img('thunderbird/appeal/nov24/logo-2004.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
+            </div>
           </div>
         </div>
         <div class="feature reverse">
@@ -63,6 +66,9 @@
           </div>
           <div class="screenshot">
             {{ high_res_img('thunderbird/appeal/nov24/screen-2009.png', {'alt': ''}, alt_formats=()) }}
+            <div class="screenshot-logo">
+              {{ high_res_img('thunderbird/appeal/nov24/logo-2009.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
+            </div>
           </div>
         </div>
         <div class="feature">
@@ -75,6 +81,9 @@
           </div>
           <div class="screenshot">
             {{ high_res_img('thunderbird/appeal/nov24/screen-2018.png', {'alt': ''}, alt_formats=()) }}
+            <div class="screenshot-logo">
+              {{ high_res_img('thunderbird/appeal/nov24/logo-2018.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
+            </div>
           </div>
         </div>
         <div class="feature reverse">
@@ -87,6 +96,9 @@
           </div>
           <div class="screenshot">
             {{ high_res_img('thunderbird/appeal/nov24/screen-2024.png', {'alt': ''}, alt_formats=()) }}
+            <div class="screenshot-logo">
+              {{ high_res_img('thunderbird/appeal/nov24/logo-2024.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
+            </div>
           </div>
         </div>
       </div>
