Initial sticker placements

--- a/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
@@ -55,6 +55,20 @@
               {{ high_res_img('thunderbird/appeal/nov24/logo-2004.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
             </div>
           </div>
+          <div class="stickers">
+            <div class="sticker-im">
+              {{ svg('appeal/nov24/instant-messenger') }}
+            </div>
+            <div class="sticker-dial-up">
+              {{ svg('appeal/nov24/dial-up') }}
+            </div>
+            <div class="sticker-flip-phone">
+              {{ svg('appeal/nov24/flip-phone') }}
+            </div>
+            <div class="sticker-envelope">
+              {{ svg('appeal/nov24/envelope') }}
+            </div>
+          </div>
         </div>
         <div class="feature reverse">
           <div class="timeline-blip">
@@ -68,6 +82,17 @@
             {{ high_res_img('thunderbird/appeal/nov24/screen-2009.png', {'alt': ''}, alt_formats=()) }}
             <div class="screenshot-logo">
               {{ high_res_img('thunderbird/appeal/nov24/logo-2009.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
+            </div>
+          </div>
+          <div class="stickers">
+            <div class="sticker-media-player">
+              {{ svg('appeal/nov24/media-player') }}
+            </div>
+            <div class="sticker-envelope-2">
+              {{ svg('appeal/nov24/envelope-2') }}
+            </div>
+            <div class="sticker-chat">
+              {{ svg('appeal/nov24/chat') }}
             </div>
           </div>
         </div>
@@ -85,6 +110,17 @@
               {{ high_res_img('thunderbird/appeal/nov24/logo-2018.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
             </div>
           </div>
+          <div class="stickers">
+            <div class="sticker-early-smart-phone">
+              {{ svg('appeal/nov24/early-smart-phone') }}
+            </div>
+            <div class="sticker-mail">
+              {{ svg('appeal/nov24/mail') }}
+            </div>
+            <div class="sticker-video-chat">
+              {{ svg('appeal/nov24/video-chat') }}
+            </div>
+          </div>
         </div>
         <div class="feature reverse">
           <div class="timeline-blip">
@@ -98,6 +134,14 @@
             {{ high_res_img('thunderbird/appeal/nov24/screen-2024.png', {'alt': ''}, alt_formats=()) }}
             <div class="screenshot-logo">
               {{ high_res_img('thunderbird/appeal/nov24/logo-2024.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
+            </div>
+          </div>
+          <div class="stickers">
+            <div class="sticker-envelope-3">
+              {{ svg('appeal/nov24/envelope-3') }}
+            </div>
+            <div class="sticker-modern-smart-phone">
+              {{ svg('appeal/nov24/modern-smart-phone') }}
             </div>
           </div>
         </div>
