Mobile sticker placements

--- a/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="timeline-line"></div>
       <div class="features">
-        <div class="feature">
+        <div class="feature year-2004">
           <div class="timeline-blip">
             <h3>2004</h3>
             <div class="blip-and-line">
@@ -70,7 +70,7 @@
             </div>
           </div>
         </div>
-        <div class="feature reverse">
+        <div class="feature reverse year-2009">
           <div class="timeline-blip">
             <h3>2009</h3>
             <div class="blip-and-line">
@@ -96,7 +96,7 @@
             </div>
           </div>
         </div>
-        <div class="feature">
+        <div class="feature year-2018">
           <div class="timeline-blip">
             <h3>2018</h3>
             <div class="blip-and-line">
@@ -122,7 +122,7 @@
             </div>
           </div>
         </div>
-        <div class="feature reverse">
+        <div class="feature reverse year-2024">
           <div class="timeline-blip">
             <h3>2024</h3>
             <div class="blip-and-line">
