--- a/sites/updates.thunderbird.net/thunderbird/128.0/nov24/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/nov24/donate/index.html
@@ -12,171 +12,5 @@
 {% set utm_campaign = 'nov24_appeal' %}
 {% set donation_base_url = None %}
 
-{% extends "includes/base/base.html" %}
-{% from 'includes/macros/donate-button.html' import donate_button with context %}
-{% block base_css %}
-  <link href="{{ static('css/appeal-nov24-style.css') }}" rel="stylesheet" type="text/css"/>
-{% endblock %}
-{% block page_title %}{{ _('20 Years of Thunderbird!') }}{% endblock %}
-
-{% block content %}
-  <section id="twenty-years">
-    <div class="container">
-      <div class="section-text">
-        <h1>{{ _('Thunderbird') }} <span role="complementary">{{ _('Turns 20, Thanks to You!') }}</span></h1>
-        <div id="header-graphic" aria-label="{{ _('The text 20 Years with a the Thunderbird logo in place of the zero.') }}">
-          {{ high_res_img('thunderbird/appeal/nov24/new-header-graphic.png', {'alt': _('20')}, alt_formats=()) }}
-          <span id="years">{{ _('Years') }}</span>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section id="appeal">
-    <div class="container">
-      <div class="copy-section section-text">
-        {{ donate_button(form_id=fru_form_id, campaign=utm_campaign, base_url=donation_base_url) }}
-        <p>{{ _('On December 7, 2004, Thunderbird 1.0 was released.') }}</p>
-        <p>{{ _('Thunderbird is free. Free to use. Free of ads. Free of data tracking.') }}</p>
-        <p>{{ _('We rely solely on the generosity of our supporters and less than <b>3% of Thunderbird users keep us going.</b>') }}</p>
-        <p><b>{{ _('Please help us continue for another 20 years.') }}</b></p>
-      </div>
-    </div>
-  </section>
-  <section id="timeline">
-    <div class="container">
-      <div class="timeline-connector">
-        {{ svg('appeal/nov24/timeline-connector') }}
-      </div>
-      <div class="timeline-line"></div>
-      <div class="features">
-        <div class="feature year-2004">
-          <div class="timeline-blip">
-            <h3>2004</h3>
-            <div class="blip-and-line">
-              <div class="line"></div>
-              <div class="blip"></div>
-            </div>
-          </div>
-          <div class="screenshot">
-            {{ high_res_img('thunderbird/appeal/nov24/screen-2004.png', {'alt': ''}, alt_formats=()) }}
-            <div class="screenshot-logo">
-              {{ high_res_img('thunderbird/appeal/nov24/logo-2004.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
-            </div>
-          </div>
-          <div class="stickers">
-            <div class="sticker-im">
-              {{ svg('appeal/nov24/instant-messenger') }}
-            </div>
-            <div class="sticker-dial-up">
-              {{ svg('appeal/nov24/dial-up') }}
-            </div>
-            <div class="sticker-flip-phone">
-              {{ svg('appeal/nov24/flip-phone') }}
-            </div>
-            <div class="sticker-envelope">
-              {{ svg('appeal/nov24/envelope') }}
-            </div>
-          </div>
-        </div>
-        <div class="feature reverse year-2009">
-          <div class="timeline-blip">
-            <h3>2009</h3>
-            <div class="blip-and-line">
-              <div class="line"></div>
-              <div class="blip"></div>
-            </div>
-          </div>
-          <div class="screenshot">
-            {{ high_res_img('thunderbird/appeal/nov24/screen-2009.png', {'alt': ''}, alt_formats=()) }}
-            <div class="screenshot-logo">
-              {{ high_res_img('thunderbird/appeal/nov24/logo-2009.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
-            </div>
-          </div>
-          <div class="stickers">
-            <div class="sticker-media-player">
-              {{ svg('appeal/nov24/media-player') }}
-            </div>
-            <div class="sticker-envelope-2">
-              {{ svg('appeal/nov24/envelope-2') }}
-            </div>
-            <div class="sticker-chat">
-              {{ svg('appeal/nov24/chat') }}
-            </div>
-          </div>
-        </div>
-        <div class="feature year-2018">
-          <div class="timeline-blip">
-            <h3>2018</h3>
-            <div class="blip-and-line">
-              <div class="line"></div>
-              <div class="blip"></div>
-            </div>
-          </div>
-          <div class="screenshot">
-            {{ high_res_img('thunderbird/appeal/nov24/screen-2018.png', {'alt': ''}, alt_formats=()) }}
-            <div class="screenshot-logo">
-              {{ high_res_img('thunderbird/appeal/nov24/logo-2018.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
-            </div>
-          </div>
-          <div class="stickers">
-            <div class="sticker-early-smart-phone">
-              {{ svg('appeal/nov24/early-smart-phone') }}
-            </div>
-            <div class="sticker-mail">
-              {{ svg('appeal/nov24/mail') }}
-            </div>
-            <div class="sticker-video-chat">
-              {{ svg('appeal/nov24/video-chat') }}
-            </div>
-          </div>
-        </div>
-        <div class="feature reverse year-2024">
-          <div class="timeline-blip">
-            <h3>2024</h3>
-            <div class="blip-and-line">
-              <div class="line"></div>
-              <div class="blip"></div>
-            </div>
-          </div>
-          <div class="screenshot">
-            {{ high_res_img('thunderbird/appeal/nov24/screen-2024.png', {'alt': ''}, alt_formats=()) }}
-            <div class="screenshot-logo">
-              {{ high_res_img('thunderbird/appeal/nov24/logo-2024.png', {'alt': ''}, alt_formats=('webp', 'avif')) }}
-            </div>
-          </div>
-          <div class="stickers">
-            <div class="sticker-envelope-3">
-              {{ svg('appeal/nov24/envelope-3') }}
-            </div>
-            <div class="sticker-modern-smart-phone">
-              {{ svg('appeal/nov24/modern-smart-phone') }}
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="footer-graphic">
-        {{ high_res_img('thunderbird/appeal/nov24/logo-20-years.png', {'alt': _('The text 20 Years with a the Thunderbird logo in place of the zero.')}, alt_formats=('avif', 'webp')) }}
-      </div>
-      <div class="heart-container">
-        <div class="left-lines">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
-        </div>
-        <a id="donate-footer" class="btn btn-no-bg" aria-label="{{ _('Donate') }}" title="{{ _('Donate') }}"
-           href="{{ donate_url(content='bottom_cta', campaign=utm_campaign, form_id=fru_form_id, base_url=donation_base_url) }}">
-          <span aria-hidden="true" class="heart-svg">{{ svg('donate-heart') }}</span>
-          {{ _('Donate') }}
-        </a>
-        <div class="right-lines">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
-        </div>
-      </div>
-      <p class="closing-text">
-        {{ _('The Thunderbird Team') }}
-      </p>
-    </div>
-  </section>
-{% endblock %}
+{# Just include previous page instead of duplicating it all #}
+{% extends "thunderbird/128.0/nov24/index.html" %}
