Fix localization string error.

--- a/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
@@ -25,7 +25,7 @@
   <section id="twenty-years">
     <div class="container">
       <div class="section-text">
-        <h1>{{ _('Thunderbird') }} <span role="complementary">{{ _('Turns 20, Thanks to You!') }}</span></h1>
+        <h1>{{ _('Thunderbird <span role="complementary">Turns 20, Thanks to You!</span>') }}</h1>
         <div id="header-graphic" aria-label="{{ _('The text 20 Years with a the Thunderbird logo in place of the zero.') }}">
           {{ high_res_img('thunderbird/appeal/nov24/new-header-graphic.png', {'alt': _('20')}, alt_formats=()) }}
           <span id="years">{{ _('Years') }}</span>
