--- a/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/nov24/index.html
@@ -20,6 +20,9 @@
 {% endblock %}
 {% block page_title %}{{ _('20 Years of Thunderbird!') }}{% endblock %}
 
+{% macro svg_img(file_name, alt_text='') %}
+<img src="{{ static('svg/{file_name}.svg'.format(file_name=file_name)) }}" alt="{{ alt_text }}"/>
+{% endmacro %}
 
 {% block content %}
   <section id="twenty-years">
@@ -47,7 +50,7 @@
   <section id="timeline">
     <div class="container">
       <div class="timeline-connector">
-        {{ svg('appeal/nov24/timeline-connector') }}
+        {{ svg_img('appeal/nov24/timeline-connector') }}
       </div>
       <div class="timeline-line"></div>
       <div class="features">
@@ -67,16 +70,16 @@
           </div>
           <div class="stickers">
             <div class="sticker-im">
-              {{ svg('appeal/nov24/instant-messenger') }}
+              {{ svg_img('appeal/nov24/instant-messenger') }}
             </div>
             <div class="sticker-dial-up">
-              {{ svg('appeal/nov24/dial-up') }}
+              {{ svg_img('appeal/nov24/dial-up') }}
             </div>
             <div class="sticker-flip-phone">
-              {{ svg('appeal/nov24/flip-phone') }}
+              {{ svg_img('appeal/nov24/flip-phone') }}
             </div>
             <div class="sticker-envelope">
-              {{ svg('appeal/nov24/envelope') }}
+              {{ svg_img('appeal/nov24/envelope') }}
             </div>
           </div>
         </div>
@@ -96,13 +99,13 @@
           </div>
           <div class="stickers">
             <div class="sticker-media-player">
-              {{ svg('appeal/nov24/media-player') }}
+              {{ svg_img('appeal/nov24/media-player') }}
             </div>
             <div class="sticker-envelope-2">
-              {{ svg('appeal/nov24/envelope-2') }}
+              {{ svg_img('appeal/nov24/envelope-2') }}
             </div>
             <div class="sticker-chat">
-              {{ svg('appeal/nov24/chat') }}
+              {{ svg_img('appeal/nov24/chat') }}
             </div>
           </div>
         </div>
@@ -122,13 +125,13 @@
           </div>
           <div class="stickers">
             <div class="sticker-early-smart-phone">
-              {{ svg('appeal/nov24/early-smart-phone') }}
+              {{ svg_img('appeal/nov24/early-smart-phone') }}
             </div>
             <div class="sticker-mail">
-              {{ svg('appeal/nov24/mail') }}
+              {{ svg_img('appeal/nov24/mail') }}
             </div>
             <div class="sticker-video-chat">
-              {{ svg('appeal/nov24/video-chat') }}
+              {{ svg_img('appeal/nov24/video-chat') }}
             </div>
           </div>
         </div>
@@ -148,10 +151,10 @@
           </div>
           <div class="stickers">
             <div class="sticker-envelope-3">
-              {{ svg('appeal/nov24/envelope-3') }}
+              {{ svg_img('appeal/nov24/envelope-3') }}
             </div>
             <div class="sticker-modern-smart-phone">
-              {{ svg('appeal/nov24/modern-smart-phone') }}
+              {{ svg_img('appeal/nov24/modern-smart-phone') }}
             </div>
           </div>
         </div>
