Don't include the bold tag in the translation tag

--- a/sites/www.thunderbird.net/donate/help/index.html
+++ b/sites/www.thunderbird.net/donate/help/index.html
@@ -24,9 +24,11 @@
       {% if show_donor_help_slow_warning %}
         <div id="warning" class="warning-panel">
           <p>
-            {% trans trimmed %}
-              <b>Our Team is experiencing a backlog in donor inquiries. Please expect a delay in our response time to your inquiry.</b>
-            {% endtrans %}
+            <b>
+              {% trans trimmed %}
+                Our Team is experiencing a backlog in donor inquiries. Please expect a delay in our response time to your inquiry.
+              {% endtrans %}
+            </b>
             {% trans trimmed %}
               We appreciate your understanding and thank you in advance for your support!
             {% endtrans %}
