Updated staff list

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -163,6 +163,7 @@
           {{ job_block(_('Manager, Comms & Community'), 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Manager, Mobile Engineering'), 'Philipp Kewisch', high_res_img('thunderbird/staff/philipp_kewisch.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr. Release Engineer'), 'Rob Lemley', high_res_img('thunderbird/staff/rob_lemley.png', scale='2x', alt_formats=('webp',))) }}
+          {{ job_block(_('Sr Software Engineer, Test'), 'Rob Wood', high_res_img('thunderbird/staff/rob_wood.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('User Support Specialist'), 'Roland Tanglao', high_res_img('thunderbird/staff/roland_tanglao.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Sr Site Reliability Engineer'), 'Ryan Jung', high_res_img('thunderbird/staff/ryan_jung.png', scale='2x', alt_formats=('webp',))) }}
           {{ job_block(_('Customer Experience Specialist'), 'Sarah Regenspan', high_res_img('thunderbird/staff/sarah_regenspan.png', scale='2x', alt_formats=('webp',))) }}
