--- a/sites/updates.thunderbird.net/thunderbird/115.0/nov24/donate/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/115.0/nov24/donate/index.html
@@ -9,7 +9,8 @@
 
 {# For donation url generation #}
 {% set fru_form_id = '20years' %}
-{% set utm_campaign = 'nov24_appeal_115' %}
+{% set utm_campaign = 'nov24_appeal' %}
+{% set utm_source = utm_source|default('thunderbird-client115') %}
 {% set donation_base_url = None %}
 
 {# Just include previous page instead of duplicating it all #}
