Add new FRU form id for appeal

--- a/sites/updates.thunderbird.net/thunderbird/128.0/dec24/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/dec24/index.html
@@ -10,7 +10,7 @@
 {% set active_page = "appeal-dec24" %}
 
 {# For donation url generation #}
-{% set fru_form_id = fru_form_id|default('20years') %}
+{% set fru_form_id = fru_form_id|default('eoy2024') %}
 {% set utm_campaign = utm_campaign|default('dec24_appeal') %}
 {% set donation_base_url = donation_base_url|default(url('updates.appeal.dec24.donate')) %}
 
