--- a/sites/updates.thunderbird.net/thunderbird/128.0/dec24/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/dec24/index.html
@@ -20,7 +20,7 @@
 {% block base_css %}
   <link href="/media/css/appeal-128.css" rel="stylesheet" type="text/css"/>
 {% endblock %}
-{% block page_title %}{{ _('Thank you for choosing Thunderbird!') }}{% endblock %}
+{% block page_title %}{{ _('Help Keep Thunderbird Alive!') }}{% endblock %}
 {% block site_header_unwrapped %}
   <div class="overlay"></div>
   <div class="nebula-bg"></div>
