--- a/sites/updates.thunderbird.net/thunderbird/128.0/dec24/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/dec24/index.html
@@ -41,7 +41,8 @@
   <section id="donate-button-container">
     {{ donate_button(form_id=fru_form_id, campaign=utm_campaign, base_url=donation_base_url) }}
   </section>
-  <section id="appeal-body" class="letter-container font-xl">
+  <section id="appeal-body">
+    <div class="letter-container font-xl">
     <p>{{ _('All of the work we do is funded by less than 3% of our users.')}}</p>
     <p>
       {{ _('We never show advertisements or sell your data. We don’t have corporate funding. We are fully funded by financial contributions from our users.')}}
@@ -66,5 +67,6 @@
       </div>
     </div>
     <p class="closing-text">{{ _('The Thunderbird Team') }}</p>
+    </div>
   </section>
 {% endblock %}
