Add alt formats for Roc image

--- a/sites/updates.thunderbird.net/thunderbird/128.0/dec24/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/dec24/index.html
@@ -32,7 +32,7 @@
     </header>
     <aside id="illustration" aria-hidden="true">
       <div id="roc">
-        {{ high_res_img('thunderbird/appeal/dec24/forest-roc.png', {'alt': _('')}, alt_formats=()) }}
+        {{ high_res_img('thunderbird/appeal/dec24/forest-roc.png', {'alt': _('')}, alt_formats=('webp', 'avif')) }}
       </div>
     </aside>
   </div>
