--- a/sites/updates.thunderbird.net/thunderbird/128.0/dec24/index.html
+++ b/sites/updates.thunderbird.net/thunderbird/128.0/dec24/index.html
@@ -12,6 +12,7 @@
 {# For donation url generation #}
 {% set fru_form_id = fru_form_id|default('eoy2024') %}
 {% set utm_campaign = utm_campaign|default('dec24_appeal') %}
+{% set utm_source = utm_source|default('thunderbird-client') %}
 {% set donation_base_url = donation_base_url|default(url('updates.128.appeal.dec24.donate')) %}
 
 {% extends "includes/base/base.html" %}
@@ -40,7 +41,7 @@
 {% endblock %}
 {% block content %}
   <section id="donate-button-container">
-    {{ donate_button(form_id=fru_form_id, campaign=utm_campaign, base_url=donation_base_url) }}
+    {{ donate_button(form_id=fru_form_id, campaign=utm_campaign, source=utm_source, base_url=donation_base_url) }}
   </section>
   <section id="appeal-body">
     <div class="letter-container font-xl">
