Add matomo-track-download to the /thunderbird/all download page. (Fixes #732)

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -90,7 +90,7 @@
         <div class="download-button download-button-page download-spacing">
             <a
               id="download-btn"
-              class="btn btn-download btn-white-bg btn-slim"
+              class="btn btn-download btn-white-bg btn-slim matomo-track-download"
               href="{{ download_url(platform_os=win64) }}"
               data-donate-redirect="download-{{ channel or 'esr' }}"
               data-donate-content="post_download"
