--- a/sites/www.thunderbird.net/thunderbird/wallpaper/index.html
+++ b/sites/www.thunderbird.net/thunderbird/wallpaper/index.html
@@ -14,7 +14,7 @@
 {% block content %}
 <section>
   <div class="container">
-    <img src="/media/img/thunderbird/wallpapers/Thunderbird_Desktop_Wallpaper_012025.jpg" alt="{{_('Thunderbird Desktop Wallpaer')}}">
+    <img src="/media/img/thunderbird/wallpapers/Thunderbird_Desktop_Wallpaper_012025.png" alt="{{_('Thunderbird Desktop Wallpaer')}}">
   </div>
 </section>
 {% endblock %}
