--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -3,6 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
 {% set active_page = "index" %}
+{% set is_homepage = True %}
 {% extends "includes/base/page.html" %}
 {% from 'includes/macros/download-block.html' import download_block with context %}
 {% from 'includes/macros/download-smart.html' import download_smart with context %}
