--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -35,7 +35,7 @@
               {{ _('The official annual extended support release. This release is intended for users who want all available new features on an annual basis and stability/security fixes on a monthly basis.') }}
             </p>
             <p id="release-notice" class="notice-panel info hidden">
-              {{ _('The official monthly release. This release is intended for users who want all available new features and all available bug fixes on a monthly basis.') }}
+              {{ _('The official monthly release. This release is intended for users who want all available new features and bug fixes on a monthly basis.') }}
             </p>
           </div>
 
